--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     ]
   },
   "devDependencies": {
+    "enzyme": "^3.11.0",
     "eslint": "7.2.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "^6.11.0",
