--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.7.0",
-    "eslint-config-airbnb": "18.2.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "2.21.2",
     "eslint-plugin-jest": "^23.20.0",
@@ -44,7 +44,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "4.0.0",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.1",
     "react-test-renderer": "^16.13.1"
   }
 }
