--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "2.21.2",
     "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-jest-dom": "^3.2.3",
     "eslint-plugin-jsx-a11y": "6.3.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "4.0.0",
+    "eslint-plugin-testing-library": "^3.8.0",
     "prettier": "^2.1.1",
     "react-test-renderer": "^16.13.1"
   }
