--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["airbnb", "prettier", "prettier/react"],
+  "extends": ["airbnb-typescript-prettier"],
   "plugins": ["prettier", "jest"],
   "rules": {
     "prettier/prettier": [
